drkns 11.06.2016 22:55:07 +0200 - build 4702

1. Ещё одно уточнение работы запускателя.

drkns 11.06.2016 20:05:25 +0200 - build 4701

1. Рефакторинг.

drkns 10.06.2016 23:49:57 +0200 - build 4700

1. Рефакторинг.

drkns 09.06.2016 01:50:33 +0200 - build 4699

1. Ещё раз #0003223: Добавлен параметр System.Executor.ComspecCondition, определяющий, когда команду следует запускать через comspec.

w17 08.06.2016 21:15:44 +0300 - build 4698

1. Уточнение 4697 - не пытаемся отключать Win10 full-screen, просто ничего не делаем по Alt-F9 для него.

w17 08.06.2016 17:25:01 +0300 - build 4697

1. Пытаемся нормально отрабатывать полноэкранный режим Win10.

zg 08.06.2016 15:46:48 +0200 - build 4696

1. уточнение 4676.

zg 02.06.2016 01:51:47 +0200 - build 4695

1. с форума: Если в диалоге начать записывать макрос (нажать Ctrl.), то индикатор записи макроса сразу не появляется,
   а только после нажатия дополнительной клавиши (и то не любой).

drkns 01.06.2016 22:51:16 +0200 - build 4694

1. С форума: Menu.Id в диалогах приводило к падению.

2. Не пересохраняем farmenu.ini после Alt-F4, дабы кривые файлы меню не терялись сразу же.

drkns 25.05.2016 20:16:03 +0200 - build 4693

1. При [x] Cursor at the end неадекватно работала замена в редакторе, содержащая \t.

zg 24.05.2016 13:58:55 +0200 - build 4692

1. уточнение 4685.

zg 24.05.2016 00:30:32 +0200 - build 4691

1. уточнение 4685.

drkns 23.05.2016 18:05:10 +0200 - build 4690

1. Уточнение работы запускателя.

svs 23.05.2016 15:51:37 +0300 - build 4689

1. SQLite 3.13.0

drkns 22.05.2016 21:51:25 +0200 - build 4688

1. 0003245: Падение при нажатии Shift-F2 в User Menu

2. Рефакторинг.

drkns 21.05.2016 20:30:22 +0200 - build 4687

1. По мотивам #0003244 - отображаем часы в соответствии с региональными настройками ОС.

zg 21.05.2016 11:27:47 +0200 - build 4686

1. с форума: резкое замедление работы UNDO/REDO в редакторе.

2. замедление встроенной замены после 4673.

zg 21.05.2016 04:45:34 +0200 - build 4685
